# MixandMatch

./: CMakeLists.txt  Readme.md  Source.cpp
include/: Shader.h  object-source-code.h  separateRenderer.h  shader-source-code.h
include/glad/: glad.h
lib/glfw/: glfw3.lib
src/: Source.cpp  glad.c
